testing overflow scroll fix

--- a/client/src/components/shared/Layout.css
+++ b/client/src/components/shared/Layout.css
@@ -1,6 +1,5 @@
 .layout {
   min-height: 100vh;
-  min-height: -webkit-fill-available;
   display: flex;
   flex-direction: column;
 }
@@ -8,7 +7,8 @@
 .layout-children {
   flex: 2;
   background-color: black;
-
+  overflow-x: hidden;
+  overflow-y: scroll;
   padding: 190px 0 0;
 }
 
